# space-game

./: Cargo.toml  Makefile.toml  index.html  rustfmt.toml
.cargo/: config
crates/space_game/: Cargo.toml  Makefile.toml  Trunk.toml  index.html
crates/space_game/res/: test.frag.glsl  test.vert.glsl
crates/space_game/src/: dom.rs  galaxy.rs  galaxy.wgsl  gl.rs  histogram.rs  lib.rs  main.rs  main.wgsl  mesh.rs  plat.rs  render.rs  tonemap.rs  tonemap.wgsl  tonemap_histogram.wgsl  tonemap_render.wgsl  voxel.rs
crates/space_game/src/dom/: input.rs
crates/space_game/src/gl/: buffer.rs  draw.rs  shader.rs  texture.rs  vao.rs  vbo.rs
crates/space_game/src/plat/: native.rs  web.rs
crates/space_game/src/render/: buffer.rs  galaxy.rs  histogram.rs  histogram.wgsl  mesh.rs  queue.rs  shader.rs  texture.rs  tonemap.rs  tonemap.wgsl  vao.rs
crates/space_game/src/voxel/: consts.rs  table.rs
crates/space_game_core/: Cargo.toml
crates/space_game_core/src/: ecs.rs  event.rs  lib.rs  orbit.rs  world.rs
crates/space_game_core/src/ecs/: call.rs  dependency.rs  entity.rs  event.rs  handler.rs  reactor.rs  state.rs  system.rs  topic.rs
crates/space_game_server/: Cargo.toml
crates/space_game_server/src/: main.rs
src/: dom.rs  lib.rs  render.rs  state.rs
src/render/: dom.rs  mesh.rs  shader.rs  texture.rs
