[package]
name = 'space_game'
version = '0.1.0'
edition = '2021'

[dependencies]
space_game_core = { path = '../space_game_core' }

# Graphics/Rendering
winit = '0.26.1'

# Math/Physics
nalgebra = { version = "0.30.1", features = ["bytemuck"] }
bytemuck = '1'

# Utilities
anyhow = {version = '1', features = ['backtrace'] }
indexmap = '1'
log = '0.4'
once_cell = '1'
thiserror = '1'

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
package = "web-sys"
version = "0.3"
features = [
    'console',
    'Document',
    'Window',
]

