[package]
name = 'space_game'
version = '0.1.0'
edition = '2021'

[dependencies]
space_game_core = { path = '../space_game_core' }

# Graphics/Rendering
winit = '0.26.1'
wgpu = { version = '0.12.0', features = ['webgl'] }

# Math/Physics
nalgebra = { version = '0.30', features = ['bytemuck'] }
bytemuck = { version = '1', features = ['derive'] }

# Utilities
anyhow = { version = '1', features = ['backtrace'] }
half = { version = '1', features = ['bytemuck'] }
indexmap = '1'
log = '0.4'
once_cell = '1'
thiserror = '1'
exr = '1'

# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = '0.9'
pollster = '0.2'

# Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = '0.2'
console_error_panic_hook = '0.1'
web-sys = { version = '0.3', features = ['console', 'Document', 'Window'] }
wasm-bindgen-futures = '0.4'


