[package]
name = "space_game_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "1"
nalgebra = { version = '0.30' }
anyhow = {version = '1', features = ['backtrace'] }
thiserror = '1'
once_cell = '1'
duplicate = '0.4'
