[package]
name = "space_game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.4", features = ["ws"] }
tower-http = { version = "0.2", features = ["fs"] }
clap = { version = "3", features = ["derive"] }
futures-util = { version = "0.3" }
